# option_volitility

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TODO.md  program.md  progress.md  pyproject.toml  requirements.txt  results.tsv
.github/workflows/: paper_trade.yml
.streamlit/: config.toml  secrets.toml.example
configs/: backtest.yaml  backtest_zero_cost.yaml  live.yaml  universe.yaml
dashboard/: app.py
dashboard/components/: __init__.py  charts.py  tables.py
dashboard/pages/: 1_📊_Data_Explorer.py  2_🔬_Feature_Analysis.py  3_🤖_Model_Comparison.py  4_📈_Backtest_Results.py  6_⚙️_Settings.py  6_💰_Paper_Trading.py
data/paper_trading/: latest_summary.json  snapshots.json  state.json
data/processed/: equity.csv  equity_nasdaq100.csv  pair_positions.parquet  pair_positions_nasdaq100.parquet  pairs.csv  pairs_nasdaq100.csv  prices.parquet  selected_pair.csv  selected_pair_nasdaq100.csv  weights.parquet  weights_nasdaq100.parquet
data/raw/: sector_map.csv
execution/: broker_alpaca.py  rebalance.py  risk_manager.py
infrastructure/docker/: Dockerfile
notebooks/: exploration.ipynb
quant-statarb-kalman/: README.md  TODO.md
quant-statarb-kalman/configs/: backtest.yaml  universe.yaml
quant-statarb-kalman/quant_statarb_kalman.egg-info/: PKG-INFO  top_level.txt
quant-statarb-kalman/statarb/: backtest.py  cli.py  data.py
quant-statarb-kalman/tests/: test_backtest.py  test_kalman.py  test_pairs.py
quant_statarb_kalman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: fetch_data.py  paper_trade.py  robust_download.py  run_backtest.py  run_daily.sh  run_dashboard.py  train_models.py
src/: __init__.py
src/backtest/: __init__.py  metrics.py  position.py  risk.py  strategy.py
src/data/: __init__.py  data_fetcher.py  massive_client.py  polygon_client.py  storage.py
src/features/: __init__.py  macro.py  pipeline.py  technical.py  volatility.py
src/models/: __init__.py  base.py  baseline.py  ensemble.py  linear.py  (+3 more)
statarb/: __init__.py  backtest.py  cli.py  costs.py  dashboard.py  data.py  kalman.py  metrics.py  pairs.py  portfolio.py  signals.py  universe.py
tests/: __init__.py  conftest.py  test_backtest.py  test_data.py  test_deep_learning.py  test_ensemble.py  test_features.py  test_kalman.py  test_massive_client.py  test_models.py  test_paper_trading.py  test_signals.py  test_strategy.py  test_training.py  test_tree_models.py
(+11 files in other folders)
