[project]
name = "option-volatility"
version = "0.1.0"
description = "Option Volatility Selling Strategy with ML Enhancement"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["options", "volatility", "machine-learning", "trading", "finance"]

dependencies = [
    # Data processing
    "pandas>=2.0",
    "polars>=0.20",
    "pyarrow>=14.0",
    "numpy>=1.24",

    # API & HTTP
    "requests>=2.31",
    "aiohttp>=3.9",

    # Machine Learning
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.5",

    # Deep Learning
    "torch>=2.0",

    # Visualization
    "plotly>=5.18",
    "streamlit>=1.30",
    "matplotlib>=3.8",

    # Finance
    "scipy>=1.11",

    # Utilities
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "tqdm>=4.66",
    "joblib>=1.3",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.6",
    "ipykernel>=6.27",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
